Rerun and added documentation

--- a/Stemming Words.ipynb
+++ b/Stemming Words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4  [@] you heard me bitch but any way im back th ...      0.5185            1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,12 +221,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "stop_words = set(stopwords.words('english'))"
+    "1) Remove commonly used words (stop words)\n",
+    "\n",
+    "2) Remove slang words\n",
+    "\n",
+    "3) Remove contraction words"
    ]
   },
   {
@@ -235,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slang_words = ['u','ur','urs','urself','urselves','r','y','cus','cuz','bc','w','thru','n',]"
+    "stop_words = set(stopwords.words('english'))"
    ]
   },
   {
@@ -244,12 +246,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contraction_words = ['id','ill','ive','im','theyre','theyve','weve','itll','thats','theres','lets','cant','dont','didnt','arent','isnt','wont','whos']"
+    "slang_words = ['u','ur','urs','urself','urselves','r','y','cus','cuz','bc','w','thru','n',]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contraction_words = ['id','ill','ive','im','theyre','theyve','weve','itll','thats','theres','lets','cant','dont','didnt','arent','isnt','wont','whos']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +353,7 @@
        "4  [@] heard bitch way back th texas wtf talking ...      0.5185            1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +444,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,8 +461,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reduce inflected or derived words to their word stems (base or root form)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,77 +496,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Filter out Empty and Duplicate Tweets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14509"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14508"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = data[data[\"tweet_text\"] != '']\n",
-    "len(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13074"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = data.drop_duplicates(subset=['tweet_text', 'tweet_class'])\n",
-    "len(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +570,7 @@
        "4  [@] heard bitch way back th texa wtf talk bitc...      0.5185            1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +661,258 @@
        "14508            0  "
       ]
      },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter out Empty and Duplicate Tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removes duplicate tweets and eliminates possibility of empty tweets after filtering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14509"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14508"
+      ]
+     },
      "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data[data[\"tweet_text\"] != '']\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13005"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.drop_duplicates(subset=['tweet_text', 'tweet_class'])\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>tweet_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>warn penni board make faggot</td>\n",
+       "      <td>0.6013</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fuck dyke</td>\n",
+       "      <td>0.7227</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[@] [@] [@] [@] [@] least look like jefre star...</td>\n",
+       "      <td>0.5229</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[@] [@] [@] fag jacki jealou neeeee</td>\n",
+       "      <td>0.5184</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[@] heard bitch way back th texa wtf talk bitc...</td>\n",
+       "      <td>0.5185</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text  confidence  tweet_class\n",
+       "0                       warn penni board make faggot      0.6013            1\n",
+       "1                                          fuck dyke      0.7227            2\n",
+       "2  [@] [@] [@] [@] [@] least look like jefre star...      0.5229            2\n",
+       "3                [@] [@] [@] fag jacki jealou neeeee      0.5184            2\n",
+       "4  [@] heard bitch way back th texa wtf talk bitc...      0.5185            1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>tweet_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14504</th>\n",
+       "      <td>sorri offend white supremacist aryan nation ne...</td>\n",
+       "      <td>0.3418</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14505</th>\n",
+       "      <td>[@] caucasian euro aryan whatev realli doesnt ...</td>\n",
+       "      <td>0.6804</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14506</th>\n",
+       "      <td>[@] sir patient name aryan khan villag meeranp...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14507</th>\n",
+       "      <td>[@] happi birthday bro happi year ahead</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14508</th>\n",
+       "      <td>[@] aryan kapoor cute name tho want kamp first...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              tweet_text  confidence  \\\n",
+       "14504  sorri offend white supremacist aryan nation ne...      0.3418   \n",
+       "14505  [@] caucasian euro aryan whatev realli doesnt ...      0.6804   \n",
+       "14506  [@] sir patient name aryan khan villag meeranp...      1.0000   \n",
+       "14507            [@] happi birthday bro happi year ahead      1.0000   \n",
+       "14508  [@] aryan kapoor cute name tho want kamp first...      1.0000   \n",
+       "\n",
+       "       tweet_class  \n",
+       "14504            0  \n",
+       "14505            0  \n",
+       "14506            0  \n",
+       "14507            0  \n",
+       "14508            0  "
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,8 +929,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Determine frequency of unique words in all, neutral, offensive, and hate type tweets. This is computed after removing stop words and stemming words."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,71 +994,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_wf, neutral_wf, offensive_wf, hate_wf = wordFrequencies(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14019"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_wf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10603"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(neutral_wf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5902"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(offensive_wf)"
    ]
   },
   {
@@ -862,7 +1009,7 @@
     {
      "data": {
       "text/plain": [
-       "3549"
+       "(13398, 10092, 5766, 3481)"
       ]
      },
      "execution_count": 26,
@@ -871,7 +1018,7 @@
     }
    ],
    "source": [
-    "len(hate_wf)"
+    "len(all_wf), len(neutral_wf), len(offensive_wf), len(hate_wf)"
    ]
   },
   {
@@ -926,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
