--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -152,31 +152,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13069</th>\n",
+       "      <th>13000</th>\n",
        "      <td>sorri offend white supremacist aryan nation ne...</td>\n",
        "      <td>0.3418</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13070</th>\n",
+       "      <th>13001</th>\n",
        "      <td>[@] caucasian euro aryan whatev realli doesnt ...</td>\n",
        "      <td>0.6804</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13071</th>\n",
+       "      <th>13002</th>\n",
        "      <td>[@] sir patient name aryan khan villag meeranp...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13072</th>\n",
+       "      <th>13003</th>\n",
        "      <td>[@] happi birthday bro happi year ahead</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13073</th>\n",
+       "      <th>13004</th>\n",
        "      <td>[@] aryan kapoor cute name tho want kamp first...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
@@ -187,18 +187,18 @@
       ],
       "text/plain": [
        "                                              tweet_text  confidence  \\\n",
-       "13069  sorri offend white supremacist aryan nation ne...      0.3418   \n",
-       "13070  [@] caucasian euro aryan whatev realli doesnt ...      0.6804   \n",
-       "13071  [@] sir patient name aryan khan villag meeranp...      1.0000   \n",
-       "13072            [@] happi birthday bro happi year ahead      1.0000   \n",
-       "13073  [@] aryan kapoor cute name tho want kamp first...      1.0000   \n",
+       "13000  sorri offend white supremacist aryan nation ne...      0.3418   \n",
+       "13001  [@] caucasian euro aryan whatev realli doesnt ...      0.6804   \n",
+       "13002  [@] sir patient name aryan khan villag meeranp...      1.0000   \n",
+       "13003            [@] happi birthday bro happi year ahead      1.0000   \n",
+       "13004  [@] aryan kapoor cute name tho want kamp first...      1.0000   \n",
        "\n",
        "       tweet_class  \n",
-       "13069            0  \n",
-       "13070            0  \n",
-       "13071            0  \n",
-       "13072            0  \n",
-       "13073            0  "
+       "13000            0  \n",
+       "13001            0  \n",
+       "13002            0  \n",
+       "13003            0  \n",
+       "13004            0  "
       ]
      },
      "execution_count": 5,
@@ -246,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "13074"
+       "13005"
       ]
      },
      "execution_count": 8,
@@ -295,7 +295,7 @@
     {
      "data": {
       "text/plain": [
-       "13993"
+       "13382"
       ]
      },
      "execution_count": 12,
@@ -315,8 +315,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x13993 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 98471 stored elements in Compressed Sparse Row format>"
+       "<13005x13382 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 13,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "81468"
+       "79813"
       ]
      },
      "execution_count": 17,
@@ -392,8 +392,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x81468 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 187151 stored elements in Compressed Sparse Row format>"
+       "<13005x79813 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 183898 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 18,
@@ -447,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "13993"
+       "13382"
       ]
      },
      "execution_count": 22,
@@ -467,8 +467,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x13993 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 98471 stored elements in Compressed Sparse Row format>"
+       "<13005x13382 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 23,
@@ -561,8 +561,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x13993 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 98471 stored elements in Compressed Sparse Row format>"
+       "<13005x13382 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 29,
@@ -611,7 +611,7 @@
     {
      "data": {
       "text/plain": [
-       "13074"
+       "13005"
       ]
      },
      "execution_count": 32,
@@ -631,7 +631,7 @@
     {
      "data": {
       "text/plain": [
-       "13993"
+       "13382"
       ]
      },
      "execution_count": 33,
@@ -658,8 +658,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x81468 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 187151 stored elements in Compressed Sparse Row format>"
+       "<13005x79813 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 183898 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 34,
@@ -708,7 +708,7 @@
     {
      "data": {
       "text/plain": [
-       "13074"
+       "13005"
       ]
      },
      "execution_count": 37,
@@ -728,7 +728,7 @@
     {
      "data": {
       "text/plain": [
-       "81468"
+       "79813"
       ]
      },
      "execution_count": 38,
@@ -755,8 +755,8 @@
     {
      "data": {
       "text/plain": [
-       "<13074x13993 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 98471 stored elements in Compressed Sparse Row format>"
+       "<13005x13382 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 39,
@@ -805,7 +805,7 @@
     {
      "data": {
       "text/plain": [
-       "13074"
+       "13005"
       ]
      },
      "execution_count": 42,
@@ -825,7 +825,7 @@
     {
      "data": {
       "text/plain": [
-       "13993"
+       "13382"
       ]
      },
      "execution_count": 43,
@@ -852,19 +852,19 @@
     {
      "data": {
       "text/plain": [
-       "array([-2.1335545e-03, -4.3176874e-03, -5.3112698e-03,  8.3335312e-03,\n",
-       "       -3.4590031e-04, -7.0175715e-03, -9.9533994e-04,  5.1779868e-03,\n",
-       "       -4.8099603e-03,  1.0558057e-03,  9.2459731e-03,  8.2176756e-03,\n",
-       "        6.1548216e-04,  5.0548445e-03,  8.8155353e-03, -7.6812734e-03,\n",
-       "       -1.7585208e-03, -1.4004286e-04,  2.9141470e-03, -4.6711951e-04,\n",
-       "       -5.1349709e-03, -5.3510210e-03, -1.0133900e-03,  8.0383485e-05,\n",
-       "       -4.5001958e-03,  4.1777124e-03, -1.2206006e-03, -5.4128356e-03,\n",
-       "        9.9022849e-04, -9.0047708e-03, -8.0616651e-03, -7.4932864e-03,\n",
-       "       -8.5769240e-03, -9.3520656e-03, -7.6243468e-03, -6.9579417e-03,\n",
-       "        2.6225571e-03,  9.5971470e-04,  1.0940840e-03,  5.8566043e-03,\n",
-       "        5.6933812e-03,  7.9270815e-03,  7.8341775e-03,  1.3740662e-03,\n",
-       "        9.0658972e-03, -8.5154735e-03, -7.0004682e-03, -3.2731558e-03,\n",
-       "        1.0479174e-03,  6.6217631e-03], dtype=float32)"
+       "array([ 6.4953021e-03,  6.9820066e-03, -4.4166187e-05, -1.8998964e-03,\n",
+       "       -4.0133754e-03, -5.7841744e-03,  4.8340587e-03, -6.3190283e-03,\n",
+       "        2.3390912e-03,  4.6677310e-03, -4.4860393e-03,  4.5996206e-03,\n",
+       "       -8.6005563e-03,  5.2316436e-03,  8.4189465e-03,  4.7751074e-03,\n",
+       "       -9.9477684e-03,  6.5188180e-03, -4.9401079e-03,  7.9337535e-03,\n",
+       "       -9.1199335e-03, -8.7966546e-03,  4.9402127e-03, -2.1922018e-03,\n",
+       "       -8.2682114e-04, -2.5271948e-03, -1.9736607e-03, -7.9214768e-03,\n",
+       "        7.5318743e-03,  7.9541337e-03,  1.0222443e-03,  9.4145210e-03,\n",
+       "        7.3242080e-03,  5.0746701e-03, -3.1987419e-03,  5.3780712e-04,\n",
+       "       -6.3754562e-03, -5.7360386e-03,  8.1987409e-03, -9.6234735e-03,\n",
+       "       -2.1929939e-03,  1.9825755e-03, -5.9937215e-03,  9.1574335e-04,\n",
+       "       -8.0607822e-03,  1.4040300e-03,  1.3977133e-03, -9.2347283e-03,\n",
+       "        6.2689418e-04, -7.5067501e-03], dtype=float32)"
       ]
      },
      "execution_count": 44,
@@ -884,7 +884,7 @@
     {
      "data": {
       "text/plain": [
-       "13074"
+       "13005"
       ]
      },
      "execution_count": 45,
@@ -914,6 +914,197 @@
    ],
    "source": [
     "len(feature_array_word2vec[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dimensionality Reduction for Sparse Matricies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Reduction for the unigram, bigram, and tf-idf sparse matricies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reduceDim(sparse, n):\n",
+    "    tsvd = TruncatedSVD(n_components = n)\n",
+    "    return tsvd.fit(sparse).transform(sparse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_unigram = reduceDim(feature_matrix_unigram, 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_bigram = reduceDim(feature_matrix_bigram, 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_tfidf = reduceDim(feature_matrix_tfidf, 200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison of Original Sparse Matricies to Reduced Matricies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<13005x13382 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_matrix_unigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13005, 200)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reduced_unigram), len(reduced_unigram[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<13005x79813 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 183898 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_matrix_bigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13005, 500)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reduced_bigram), len(reduced_bigram[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<13005x13382 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 96827 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_matrix_tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13005, 200)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reduced_tfidf), len(reduced_tfidf[0])"
    ]
   }
  ],
