save numpy arrays

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -852,19 +852,17 @@
     {
      "data": {
       "text/plain": [
-       "array([ 6.4953021e-03,  6.9820066e-03, -4.4166187e-05, -1.8998964e-03,\n",
-       "       -4.0133754e-03, -5.7841744e-03,  4.8340587e-03, -6.3190283e-03,\n",
-       "        2.3390912e-03,  4.6677310e-03, -4.4860393e-03,  4.5996206e-03,\n",
-       "       -8.6005563e-03,  5.2316436e-03,  8.4189465e-03,  4.7751074e-03,\n",
-       "       -9.9477684e-03,  6.5188180e-03, -4.9401079e-03,  7.9337535e-03,\n",
-       "       -9.1199335e-03, -8.7966546e-03,  4.9402127e-03, -2.1922018e-03,\n",
-       "       -8.2682114e-04, -2.5271948e-03, -1.9736607e-03, -7.9214768e-03,\n",
-       "        7.5318743e-03,  7.9541337e-03,  1.0222443e-03,  9.4145210e-03,\n",
-       "        7.3242080e-03,  5.0746701e-03, -3.1987419e-03,  5.3780712e-04,\n",
-       "       -6.3754562e-03, -5.7360386e-03,  8.1987409e-03, -9.6234735e-03,\n",
-       "       -2.1929939e-03,  1.9825755e-03, -5.9937215e-03,  9.1574335e-04,\n",
-       "       -8.0607822e-03,  1.4040300e-03,  1.3977133e-03, -9.2347283e-03,\n",
-       "        6.2689418e-04, -7.5067501e-03], dtype=float32)"
+       "array([ 0.00394714,  0.00350176,  0.00074571, -0.00575614, -0.0049629 ,\n",
+       "        0.00911527, -0.00103758,  0.00044747, -0.00443799, -0.00789101,\n",
+       "       -0.00447354, -0.00715249, -0.00310215, -0.00353015,  0.00772409,\n",
+       "        0.00361738, -0.00357419,  0.00749608,  0.00710761,  0.00255838,\n",
+       "        0.00020287,  0.0082861 , -0.00993253,  0.00979875, -0.00078083,\n",
+       "       -0.00428344, -0.00329814,  0.00984489,  0.00235699,  0.00837413,\n",
+       "        0.00577807, -0.00928916,  0.00741222,  0.00509363, -0.00231159,\n",
+       "        0.0030742 , -0.00525812,  0.00714865,  0.00926889,  0.00881244,\n",
+       "        0.00876064, -0.00493334,  0.00755112,  0.00391145, -0.00119294,\n",
+       "        0.00222101, -0.00472135, -0.00559999,  0.00249157,  0.00092713],\n",
+       "      dtype=float32)"
       ]
      },
      "execution_count": 44,
@@ -1106,6 +1104,102 @@
    "source": [
     "len(reduced_tfidf), len(reduced_tfidf[0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving NumPy Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Original Arrays:\n",
+    "\n",
+    "    feature_array_unigram\n",
+    "    \n",
+    "    feature_array_bigram\n",
+    "    \n",
+    "    feature_array_tfidf\n",
+    "    \n",
+    "    feature_array_word2vec\n",
+    "\n",
+    "Reduced Arrays:\n",
+    "\n",
+    "    reduced_unigram\n",
+    "    \n",
+    "    reduced_bigram\n",
+    "    \n",
+    "    reduced_tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_arrays = [feature_array_unigram, feature_array_bigram, feature_array_tfidf, feature_array_word2vec]\n",
+    "reduced_arrays = [reduced_unigram, reduced_bigram, reduced_tfidf]\n",
+    "\n",
+    "orginal_file_names = [\"feature_array_unigram\", \"feature_array_bigram\", \"feature_array_tfidf\", \"feature_array_word2vec\"]\n",
+    "reduced_file_names = [\"reduced_unigram\", \"reduced_bigram\", \"reduced_tfidf\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saveFile(file, array):\n",
+    "    filename = file + \".npy\"\n",
+    "    np.save(filename, array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
